[gd_scene format=3 uid="uid://cupvbdawpup3n"]

[ext_resource type="Script" path="res://scenes/states/playing/asset_browser.gd" id="1_browser"]

[node name="AssetBrowser" type="VBoxContainer"]
theme_type_variation = &"BoxContainerSpaced"
script = ExtResource("1_browser")

[node name="AddPackRow" type="HBoxContainer" parent="."]
layout_mode = 2
theme_type_variation = &"BoxContainerSpaced"

[node name="Label" type="Label" parent="AddPackRow"]
layout_mode = 2
text = "Add pack from URL:"

[node name="UrlEdit" type="LineEdit" parent="AddPackRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "https://example.com/packs/my_pack/manifest.json"

[node name="DownloadButton" type="Button" parent="AddPackRow"]
layout_mode = 2
text = "Download"

[node name="ProgressLabel" type="Label" parent="AddPackRow"]
layout_mode = 2
visible = false
theme_type_variation = &"Caption"
text = ""

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
